# application-platform

./: .gitignore  .style.yapf  Dockerfile  README.md  custom-nginx.conf  docker-compose.yml
.github/ISSUE_TEMPLATE/: userstory.md  workflows
.github/workflows/: build.yml  codeql.yml  eslint_check.yml  yapf_check.yml
backend/: README.md  apl_config.yml  pyproject.toml
backend/backend/: __init__.py  apl_config.yml  helper.py  logger.py  manage_applications.py  process_config.py  validate_config.py
backend/backend/enums/: question_type.py
backend/backend/sql/: bucket_policies.sql  delete_db.sql  empty_db.sql  functions.sql  init_db.sql  triggers.sql
backend/backend/templates/: emailChangeEmail.html  passwordChangeEmail.html  signUpEmail.html
backend/backend/utils/: consts.py  dt_utils.py  question_type.py  regex.py  utils_datetime.py  utils_file.py  utils_regex.py  utils_supabase.py
backend/tests/: test_logger.py  test_process_config.py  test_regex.py
backend/tests/assets/: apl_config_test.yml
frontend/: .eslintrc.json  Makefile  README.md  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/public/texts/: error.md  welcome.md
frontend/src/: middleware.ts
frontend/src/actions/: admin.ts  answers.ts  auth.ts  middleware.ts  phase.ts  smtp.ts
frontend/src/app/: 404.tsx  _app.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/: applicantslist.tsx  applicationOverview.tsx  awaiting.tsx  easteregg.tsx  footer.tsx  header.tsx  informationBox.tsx  login.tsx  missingQuestions.tsx  overviewButton.tsx  phaseOverview.tsx  (+9 more)
(+107 files in other folders)
